--- a/client/src/components/posts/posts.css
+++ b/client/src/components/posts/posts.css
@@ -125,6 +125,10 @@ body {
   border-radius: 0.25rem;
 }
 
+.title {
+  text-decoration: none;
+}
+
 .post-body {
   flex: 1 1 auto;
   min-height: 1px;
