--- a/client/src/components/topbar/topbar.css
+++ b/client/src/components/topbar/topbar.css
@@ -1,94 +1,4 @@
-.topbarContainer {
-  height: 50px;
-  width: 100%;
-  background-color: white;
-  display: flex;
-  align-items: center;
-  position: sticky;
-  top: 0;
-}
-
-.topbarLeft {
-  flex: 3;
-}
-
 .logo {
-  font-size: 24px;
-  margin-left: 20px;
-  color: #23395b;
   font-weight: bold;
-  cursor: pointer;
-}
-
-.topbarCenter {
-  flex: 5;
-}
-
-.searchBar {
-  width: 100%;
-  height: 30px;
-  background-color: #dadada;
-  border-radius: 30px;
-  display: flex;
-  align-items: center;
-  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
-}
-
-#search-addon {
-  position: absolute;
-  right: 0px;
-  top: 7px;
-  margin-right: 6px;
-}
-
-.searchInput {
-  border: none;
-  width: 70%;
-  background-color: #dadada;
-}
-
-.searchInput:focus {
-  outline: none;
-}
-
-.topbarRight {
-  flex: 4;
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-}
-
-.topbarLink {
-  margin-right: 10px;
-  font-size: 19px;
-  cursor: pointer;
-  color: #23395b;
-  width: 90px;
-}
-
-.topbarIcons {
-  display: flex;
-}
-
-.topbarIconItem {
-  margin-top: 10px;
-  margin-right: 15px;
-  cursor: pointer;
-  position: relative;
-  color: #375e98;
-}
-
-.topbarIconBadge {
-  width: 15px;
-  height: 15px;
-  background-color: red;
-  border-radius: 50%;
-  position: absolute;
-  top: -5px;
-  right: -5px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 12px;
-  color: white;
+  color: rgb(71, 101, 166);
 }
